# MediaRINH

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  locustfile.py  pyproject.toml
apps/account/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/account/api/: auth.py  manager.py  models.py  routers.py  schemas.py
apps/account/migrations/: 0001_initial.py
apps/channel/: admin.py  models.py  permission.py  serializers.py  urls.py  views.py
apps/channel/migrations/: 0001_initial.py  0002_alter_articlemodel_options_alter_mediamodel_options.py  0003_alter_mediamodel_compressed_media_and_more.py  0004_channelsmodel_link_name_alter_channelsmodel_name.py  0005_alter_channelsmodel_link_name.py  0006_alter_userschannelmodel_role.py
conf/: asgi.py  database.py  settings.py  urls.py  wsgi.py
utils/: img_to_webp.py  validators.py
