[tool.poetry]
name = "mediarinh"
version = "0.1.0"
description = ""
authors = ["Tolik <tolikberdyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
django = "^4.1.5"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
django-cors-headers = "^3.13.0"
pillow = "^9.4.0"
djangorestframework-simplejwt = "^5.2.2"
python-magic = "^0.4.27"
psycopg2cffi = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
