[tool.poetry]
name = "mediarinh"
version = "0.1.0"
description = ""
authors = ["Tolik <tolikberdyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
django = "^4.1.5"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
django-cors-headers = "^3.13.0"
pillow = "^9.4.0"
djangorestframework-simplejwt = "^5.2.2"
python-magic = "^0.4.27"
uvicorn = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.6"}
pg8000 = "^1.29.4"
locust = "^2.15.1"
psycopg2cffi = "^2.9.0"
fastapi = "^0.95.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
